add user resource model, blueprint and routes
